--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			<scope>annotationProcessor</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
