--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+# Configurações do Spring Boot para o projeto Cadastro de Ninjas
 spring.application.name=CadastroDeNinjas
 
 
+# Configuracoes do servidor
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
@@ -10,3 +12,8 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+
+# Configurar o flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
